--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,6 @@
 	},
 	"chrome_url_overrides" : {
 		"newtab": "newtab.html"
-	}
+	},
+	"content_security_policy": "script-src 'self' https://code.jquery.com https://maxcdn.bootstrapcdn.com https://cdnjs.cloudflare.com; object-src 'self'"
 }
