--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,7 @@
 	},
 	"content_security_policy": "script-src 'self' https://code.jquery.com https://maxcdn.bootstrapcdn.com https://cdnjs.cloudflare.com; object-src 'self'",
 	"permissions": [
-		"storage"
+		"storage",
+		"topSites"
 	]
 }
