--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,14 @@
 {
-	"name": "Minimalite",
-	"description": "New Tab page replacement",
-	"version": "0.1.6",
-	"manifest_version": 2,
-	"icons": {
-		"128": "icons/icon_128.png"
-	},
-	"chrome_url_overrides" : {
-		"newtab": "newtab.html"
-	},
-	"content_security_policy": "script-src 'self' https://code.jquery.com https://maxcdn.bootstrapcdn.com https://cdnjs.cloudflare.com; object-src 'self'",
-	"permissions": [
-		"storage",
-		"topSites"
-	]
+  "name": "Minimalite",
+  "description": "New Tab page replacement",
+  "version": "0.1.7",
+  "manifest_version": 2,
+  "icons": {
+    "128": "icons/icon_128.png"
+  },
+  "chrome_url_overrides": {
+    "newtab": "newtab.html"
+  },
+  "content_security_policy": "script-src 'self' https://code.jquery.com https://maxcdn.bootstrapcdn.com https://cdnjs.cloudflare.com; object-src 'self'",
+  "permissions": ["storage", "topSites"]
 }
